--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <h1>Hello everyone</h1>
+    <h1>Hello all</h1>
     <button class="button">click to see if I work</button>
 </body>
 
