got nav links working. working on the layout of projects and the associated links

--- a/index.html
+++ b/index.html
@@ -12,8 +12,67 @@
 </head>
 
 <body>
-    <h1>Hello all</h1>
-    <button class="button">click to see if I work</button>
+
+<div class="container">
+   
+      <nav id="nav" class="navbar navbar-expand-lg navbar-light bg-light">
+          <!-- logo text -->
+        <a id="logo-text" class="navbar-brand" href="http://zacseewaldphotography.com/" target="_blank">
+                Zac Seewald</a>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+<!-- links live here -->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <span id="spacer" class="col-3"></span>
+<!-- git repo link -->
+            <li id="nav-link-git" class="nav-item">
+              <a class="nav-link" href="https://github.com/zaxblackdragon?tab=repositories" target="_blank">
+                    <img src="assets/images/GitHub-Logo.png" height="12"  alt="GH Logo"></a>
+            </li>
+            <span id="spacer" class="col-3"></span>
+<!-- linkedIn link -->
+            <li class="nav-link-linkedin">
+              <a class="nav-link" href="https://www.linkedin.com/in/zacseewald/" target="_blank">
+                <img src="assets/images/LinkedIn_Logo.png" height="16"  alt="LI Logo"></a>
+            </li>
+            <span id="spacer" class="col-3"></span>
+ <!-- Email link -->
+                        <li class="nav-link-linkedin">
+                          <a class="nav-link" href="mailto:zac@zacseewaldphotography.com">
+                              zac@zacseewaldphotography.com
+                            </a>
+                        </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+    <!-- Project title
+    Link to the deployed version
+    Link to the code on GitHub -->
+    <div id="projects" class="container">
+            <div class="row">
+                <ul id="project-list" class="col-3 p1">
+                    <h4>Projects:</h4>
+                    <p>Description: Website that assists in the delivery of medication to a patients where they are.</p>
+                    <li id="project-title">Title: RxD</li>
+                    <li id="project-link"><a href="https://zaxblackdragon.github.io/ProjectOne/" target="_blank">Active Site</a></li>
+                    <li id="project-repo"><a href="https://github.com/zaxblackdragon/ProjectOne" target="_blank">Link to Repo</a> </li>
+                </ul>
+                <ul id="project-list" class="col-3 p2">
+                        <li id="project-title">Title 2 </li>
+                        <li id="project-link">Deployed Site 2</li>
+                        <li id="project-repo">Link to Repo 2</li>
+                    </ul>
+                <ul id="project-list" class="col-3 p3">
+                        <li id="project-title">Title 3 </li>
+                        <li id="project-link">Deployed Site 3</li>
+                        <li id="project-repo">Link to Repo 3</li>
+                    </ul>
+            </div>
+        </div>
 </body>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
