adding content for the site to the readme via markdown

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <span id="spacer" class="col-3"></span>
  <!-- Email link -->
                         <li class="nav-link-linkedin">
-                          <a class="nav-link" href="mailto:zac@zacseewaldphotography.com">
-                              zac@zacseewaldphotography.com
+                          <a class="nav-link" href="mailto:zacseewald@gmail.com">
+                              zacseewald@gmail.com
                             </a>
                         </li>
           </ul>
