--- a/index.html
+++ b/index.html
@@ -1,81 +1,59 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href=" https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" />
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
-    
+
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Zac Seewald</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" media="screen" href=" https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" />
+        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet"
+                integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" media="screen" href="assets/css/mainstyle.css" />
+
+
 </head>
 
-<body>
+<body>  
 
-<div class="container">
-   
-      <nav id="nav" class="navbar navbar-expand-lg navbar-light bg-light">
-          <!-- logo text -->
-        <a id="logo-text" class="navbar-brand" href="http://zacseewaldphotography.com/" target="_blank">
-                Zac Seewald</a>
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+  <!-- Existing NavBar -->
+        <div id="header" class="container">
+          
+<!-- Nav Bar -->
+          <nav id="nav" class="navbar  navbar-expand-lg">
+<!-- logo text -->
+            <a id="logo-text" class="navbar-brand"><img id="zac-logo" src="/assets/images/Zac-Logo.png"></a>
+            <button class="navbar-toggler" type="button" zdata-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            </button>
 <!-- links live here -->
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <span id="spacer" class="col-3"></span>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
 <!-- git repo link -->
-            <li id="nav-link-git" class="nav-item">
-              <a class="nav-link" href="https://github.com/zaxblackdragon?tab=repositories" target="_blank">
-                    <img src="assets/images/GitHub-Logo.png" height="12"  alt="GH Logo"></a>
-            </li>
-            <span id="spacer" class="col-3"></span>
+                  <li id="nav-link-git" class="nav-item">
+                    <a class="nav-link" href="https://github.com/zaxblackdragon?tab=repositories" target="_blank">GitHub</a>
+                   </li>
 <!-- linkedIn link -->
-            <li class="nav-link-linkedin">
-              <a class="nav-link" href="https://www.linkedin.com/in/zacseewald/" target="_blank">
-                <img src="assets/images/LinkedIn_Logo.png" height="16"  alt="LI Logo"></a>
-            </li>
-            <span id="spacer" class="col-3"></span>
- <!-- Email link -->
-                        <li class="nav-link-linkedin">
-                          <a class="nav-link" href="mailto:zacseewald@gmail.com">
-                              zacseewald@gmail.com
-                            </a>
-                        </li>
-          </ul>
+                    <li class="nav-item nav-link-linkedin">
+                       <a class="nav-link" href="https://www.linkedin.com/in/zacseewald/" target="_blank">Linked
+                        <img id="img-linkedin" src="assets/images/LinkedIn_Logo2.png"alt="LinkedIn"></a>
+                    </li>
+<!-- Email link -->
+                    <li id="nav-email" class="nav-item nav-link-linkedin">
+                      <a class="nav-link" href="mailto:zacseewald@gmail.com">zacseewald@gmail.com</a>
+                    </li>
+                  </ul>
+              </div>
+          </nav>
         </div>
-      </nav>
-    </div>
-    <!-- Project title
-    Link to the deployed version
-    Link to the code on GitHub -->
-    <div id="projects" class="container">
-            <div class="row">
-                <ul id="project-list" class="col-3 p1">
-                    <h4>Projects:</h4>
-                    <p>Description: Website that assists in the delivery of medication to a patients where they are.</p>
-                    <li id="project-title">Title: RxD</li>
-                    <li id="project-link"><a href="https://zaxblackdragon.github.io/ProjectOne/" target="_blank">Active Site</a></li>
-                    <li id="project-repo"><a href="https://github.com/zaxblackdragon/ProjectOne" target="_blank">Link to Repo</a> </li>
-                </ul>
-                <ul id="project-list" class="col-3 p2">
-                        <li id="project-title">Title 2 </li>
-                        <li id="project-link">Deployed Site 2</li>
-                        <li id="project-repo">Link to Repo 2</li>
-                    </ul>
-                <ul id="project-list" class="col-3 p3">
-                        <li id="project-title">Title 3 </li>
-                        <li id="project-link">Deployed Site 3</li>
-                        <li id="project-repo">Link to Repo 3</li>
-                    </ul>
-            </div>
+
+        <div id="img-container" class="container">
+                <img id="banner" src="./assets/images/couch-bg.jpg" alt="Background Image" >
+        </div>
+<!-- About Paragraph -->
+        <div class="container">
+                <p id="about-paragraph">Dedicating his professional career to learning, expanding and creating, Zac Seewald believes in hard work and dedication to all projects put in front of him. Born and raised in Austin TX he has spent the last 10 years running his photography business specializing in architectural photography and pursuing the highest quality of photographic production. He has successfully expanded his business to work with some of the most prestigious architectural firms in the country while winning many awards. In this pursuit, Zac was introduced to the world of software engineering by the needs of clients and the ever-changing environment of web based advertising and marketing. In the early part of his photography career, he began learning and expanding his knowledge by building small web sites to showcase his work to clients. As time passed he began building on that knowledge by engineering more advanced sites for his portfolio and showcasing his accomplishment to potential clients. Over a period of five years or so, that knowledge base grew along with his interest, he became engrossed in the endless possibilities. In the summer of 2018 he decided to attend the Coding Academy at The University of Texas to solidify his knowledge and build a portfolio of web based applications. Zac is very excited for the coming opportunities to learn and grow as a software engineer.</p>
         </div>
 </body>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="assets/javascript/main.js"></script>
 
 </html>
