basic layout done

--- a/index.html
+++ b/index.html
@@ -21,17 +21,18 @@
         <div id="header" class="container">
           
 <!-- Nav Bar -->
-          <nav id="nav" class="navbar  navbar-expand-lg">
+          <nav id="nav" class="navbar  navbar-expand-lg navbar-dark">
 <!-- logo text -->
-            <a id="logo-text" class="navbar-brand"><img id="zac-logo" src="/assets/images/Zac-Logo.png"></a>
-            <button class="navbar-toggler" type="button" zdata-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <a id="logo-text" class="navbar-brand">ZAC SEEWALD</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
             </button>
 <!-- links live here -->
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
 <!-- git repo link -->
-                  <li id="nav-link-git" class="nav-item">
-                    <a class="nav-link" href="https://github.com/zaxblackdragon?tab=repositories" target="_blank">GitHub</a>
+                  <li id="nav-link-git" class="nav-item active">
+                    <a class="nav-link" href="https://github.com/zaxblackdragon?tab=repositories" target="_blank">GitHub<span class="sr-only">(current)</span></a>
                    </li>
 <!-- linkedIn link -->
                     <li class="nav-item nav-link-linkedin">
@@ -46,13 +47,25 @@
               </div>
           </nav>
         </div>
-
+<!-- header image and statements -->
         <div id="img-container" class="container">
-                <img id="banner" src="./assets/images/couch-bg.jpg" alt="Background Image" >
+                <img id="banner" src="./assets/images/couch-bg.jpg" alt="Background Image">
+                <div class="caption">
+                  <h1 class="statement-banner d-none d-lg-block">
+                    CREATING
+                    <br>
+                    THE UBELIEVABLE
+                  </h1>
+                  <p id="belief-caption" class="d-none d-lg-block">Integrity, dedication, collaboration and hard work are paramount to an amazing work product and groundbreaking applications.</p>
+                </div>
         </div>
 <!-- About Paragraph -->
         <div class="container">
-                <p id="about-paragraph">Dedicating his professional career to learning, expanding and creating, Zac Seewald believes in hard work and dedication to all projects put in front of him. Born and raised in Austin TX he has spent the last 10 years running his photography business specializing in architectural photography and pursuing the highest quality of photographic production. He has successfully expanded his business to work with some of the most prestigious architectural firms in the country while winning many awards. In this pursuit, Zac was introduced to the world of software engineering by the needs of clients and the ever-changing environment of web based advertising and marketing. In the early part of his photography career, he began learning and expanding his knowledge by building small web sites to showcase his work to clients. As time passed he began building on that knowledge by engineering more advanced sites for his portfolio and showcasing his accomplishment to potential clients. Over a period of five years or so, that knowledge base grew along with his interest, he became engrossed in the endless possibilities. In the summer of 2018 he decided to attend the Coding Academy at The University of Texas to solidify his knowledge and build a portfolio of web based applications. Zac is very excited for the coming opportunities to learn and grow as a software engineer.</p>
+                <div id="paragraph-about" class="wrapper">
+                        <h5 id="about-logo">About Zac</h5>
+                        <p id="about-paragraph">Dedicating his professional career to learning, expanding and creating, Zac Seewald believes in hard work and dedication to all projects put in front of him. Born and raised in Austin TX he has spent the last 10 years running his photography business specializing in architectural photography and pursuing the highest quality of photographic production. He has successfully expanded his business to work with some of the most prestigious architectural firms in the country while winning many awards. In this pursuit, Zac was introduced to the world of software engineering by the needs of clients and the ever-changing environment of web based advertising and marketing. In the early part of his photography career, he began learning and expanding his knowledge by building small web sites to showcase his work to clients. As time passed he began building on that knowledge by engineering more advanced sites for his portfolio and showcasing his accomplishment to potential clients. Over a period of five years or so, that knowledge base grew along with his interest, he became engrossed in the endless possibilities. In the summer of 2018 he decided to attend the Coding Academy at The University of Texas to solidify his knowledge and build a portfolio of web based applications. Zac is very excited for the coming opportunities to learn and grow as a software engineer.
+                        </p>
+                </div>
         </div>
 </body>
 
